[gd_scene load_steps=18 format=2]

[ext_resource path="res://_proj/Scripts/CardTable_HEALER.gd" type="Script" id=1]
[ext_resource path="res://_proj/_CGameSystem/Scripts/Core.gd" type="Script" id=5]
[ext_resource path="res://_proj/Sprites/wood_surface_1.jpg" type="Texture" id=6]
[ext_resource path="res://_proj/_CGameSystem/Sprites/_placeholders/seethru_gray.png" type="Texture" id=7]
[ext_resource path="res://_proj/_CGameSystem/Scenes/DrawPile.tscn" type="PackedScene" id=8]
[ext_resource path="res://_proj/Scenes/Cards/Card_Spell_Heal_1.tscn" type="PackedScene" id=9]
[ext_resource path="res://_proj/Scenes/Cards/Card_Creature.tscn" type="PackedScene" id=10]
[ext_resource path="res://_proj/_CGameSystem/Scenes/CardSlot.tscn" type="PackedScene" id=11]
[ext_resource path="res://_proj/_CGameSystem/Scenes/Pile.tscn" type="PackedScene" id=12]
[ext_resource path="res://_proj/Scenes/Cards/Card_Spell_Heal_2.tscn" type="PackedScene" id=13]
[ext_resource path="res://_proj/Scenes/Cards/Card_Spell_Heal_3.tscn" type="PackedScene" id=14]
[ext_resource path="res://_proj/_CGameSystem/Scenes/stop_Button.tscn" type="PackedScene" id=15]
[ext_resource path="res://_proj/_CGameSystem/Scripts/CardArea.gd" type="Script" id=16]
[ext_resource path="res://_proj/Scenes/Cards/Card_Spell_Heal_5.tscn" type="PackedScene" id=17]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://_proj/_CGameSystem/font/Killing Loneliness.ttf"

[sub_resource type="DynamicFont" id=2]
size = 42
extra_spacing_char = 1
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 21
extra_spacing_char = 1
font_data = SubResource( 1 )

[node name="Core" type="Node2D"]
script = ExtResource( 5 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 0, -17 )
texture = ExtResource( 6 )
centered = false
region_rect = Rect2( 0, 0, 1024, 600 )

[node name="CardTable" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="CardTable"]
visible = false
position = Vector2( -1, 80.6652 )
scale = Vector2( 1.46429, 0.863333 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 700, 600 )

[node name="Card_Areas" type="Node2D" parent="CardTable"]
position = Vector2( 100, 0 )

[node name="Draw" type="Node2D" parent="CardTable/Card_Areas" groups=[
"CardAreas",
]]
position = Vector2( 50, 426 )
script = ExtResource( 16 )
Start_As_Active = false

[node name="slots" type="Node2D" parent="CardTable/Card_Areas/Draw"]

[node name="DrawPile" parent="CardTable/Card_Areas/Draw/slots" instance=ExtResource( 8 )]
CardTypes = [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 17 ) ]
Amounts = [ 6, 3, 4, 2, 1 ]
Draw_Size = 1
Default_Target_Area_Name = "fuuk"

[node name="Discard" type="Node2D" parent="CardTable/Card_Areas" groups=[
"CardAreas",
]]
position = Vector2( 50, 275 )
script = ExtResource( 16 )

[node name="slots" type="Node2D" parent="CardTable/Card_Areas/Discard"]

[node name="Pile" parent="CardTable/Card_Areas/Discard/slots" instance=ExtResource( 12 )]
Intercept_Function = "discard_selected_cards"
Reveal_On_Arrival = true

[node name="Hand" type="Node2D" parent="CardTable/Card_Areas" groups=[
"CardAreas",
]]
position = Vector2( 235, 492 )
script = ExtResource( 16 )

[node name="slots" type="Node2D" parent="CardTable/Card_Areas/Hand"]

[node name="0" parent="CardTable/Card_Areas/Hand/slots" instance=ExtResource( 11 )]
Reveal_On_Arrival = true
Start_of_Round_Clear = true

[node name="1" parent="CardTable/Card_Areas/Hand/slots" instance=ExtResource( 11 )]
position = Vector2( 100, 0 )
Reveal_On_Arrival = true
Start_of_Round_Clear = true

[node name="2" parent="CardTable/Card_Areas/Hand/slots" instance=ExtResource( 11 )]
position = Vector2( 200, 0 )
Reveal_On_Arrival = true
Start_of_Round_Clear = true

[node name="3" parent="CardTable/Card_Areas/Hand/slots" instance=ExtResource( 11 )]
position = Vector2( 300, 0 )
Reveal_On_Arrival = true
Start_of_Round_Clear = true

[node name="4" parent="CardTable/Card_Areas/Hand/slots" instance=ExtResource( 11 )]
position = Vector2( 400, 0 )
Reveal_On_Arrival = true
Start_of_Round_Clear = true

[node name="Track" type="Node2D" parent="CardTable/Card_Areas" groups=[
"CardAreas",
]]
position = Vector2( 235, 200 )
script = ExtResource( 16 )

[node name="slots" type="Node2D" parent="CardTable/Card_Areas/Track"]

[node name="0" parent="CardTable/Card_Areas/Track/slots" instance=ExtResource( 11 )]
Reveal_On_Arrival = true
Start_of_Round_Clear = true

[node name="1" parent="CardTable/Card_Areas/Track/slots" instance=ExtResource( 11 )]
position = Vector2( 100, 0 )
Reveal_On_Arrival = true
Start_of_Round_Clear = true

[node name="2" parent="CardTable/Card_Areas/Track/slots" instance=ExtResource( 11 )]
position = Vector2( 200, 0 )
Reveal_On_Arrival = true
Start_of_Round_Clear = true

[node name="3" parent="CardTable/Card_Areas/Track/slots" instance=ExtResource( 11 )]
position = Vector2( 300, 0 )
Reveal_On_Arrival = true
Start_of_Round_Clear = true

[node name="4" parent="CardTable/Card_Areas/Track/slots" instance=ExtResource( 11 )]
position = Vector2( 400, 0 )
Reveal_On_Arrival = true
Start_of_Round_Clear = true

[node name="next_Button" parent="CardTable" instance=ExtResource( 15 )]
margin_left = 105.0
margin_right = 195.0
text = "End turn"

[node name="reveal_Timer" type="Timer" parent="CardTable"]
one_shot = true

[node name="reshuffle_Timer" type="Timer" parent="CardTable"]
wait_time = 3.0
one_shot = true

[node name="start_Button" type="Button" parent="."]
visible = false
margin_left = 39.0
margin_top = 24.0
margin_right = 150.0
margin_bottom = 58.0
text = "Next round"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset_Button" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 550.0
margin_right = 122.0
margin_bottom = 572.0
text = "reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_over" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="game_over"]
margin_left = 522.0
margin_top = 45.0
margin_right = 963.0
margin_bottom = 347.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="game_over"]
margin_left = 525.0
margin_top = 172.0
margin_right = 963.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "hmmm..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="game_over"]
margin_left = 864.0
margin_top = 287.0
margin_right = 949.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "...shit"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CardTable/next_Button" to="CardTable" method="_on_next_Button_pressed"]
[connection signal="timeout" from="CardTable/reveal_Timer" to="CardTable" method="_on_reveal_Timer_timeout"]
[connection signal="timeout" from="CardTable/reshuffle_Timer" to="CardTable" method="_on_reshuffle_Timer_timeout"]
[connection signal="pressed" from="start_Button" to="." method="_on_start_Button_pressed"]
[connection signal="pressed" from="reset_Button" to="." method="_on_reset_Button_pressed"]
